# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile

bin_PROGRAMS = xmolvis

xmolvis_SOURCES = xmolvis.cxx fl_xmol_view.cxx fl_table.cxx fl_gl_mol_view.cxx fl_gl_atom.cxx \
      cviewmol.cxx cmapcell.cxx csupercell.cxx cfragment.cxx cfile.cxx ctopmol.cxx \
      cposcar.cxx cpotcar.cxx cxyz.cxx cgau.cxx czmat.cxx cpdb.cxx cdlp.cxx \
      sphere.cxx cpalette.cxx

xmolvis_CPPFLAGS = -I$(top_srcdir)/include